--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         </div>
         
         <!--Load JavaScript-->
-        <script data-cfasync="false" src="../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/jquery.js"></script>			
+        <script data-cfasync="false" src="cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="js/jquery.js"></script>			
         <script src='js/jquery.smartmenus.min.js'></script>                                 
         <script src='js/isotope.pkgd.js'></script>                                    
         <script src='js/jquery.prettyPhoto.js'></script>                                            
