--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
                     
                     <div class="social-holder center-text top-60">
                         <!-- <a class="social-text" href="">TWITTER</a> -->
-                        <a class="social-text" href="https://wa.me/2348108806808">WHATSAPP</a>
+                        <a class="social-text" href="https://wa.me/2348108806808?text=Hello%2C%20I%20got%20your%20details%20from%20your%20online%20portfolio.">WHATSAPP</a>
                         <a class="social-text" href="https://instagram.com/zurnergymedia">INSTAGRAM</a>
                     </div>
                     
